[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "CLI key-value store tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.0", features = ["derive"]}
serde = {version="*", features = ["derive"]}
bincode = {version="1.3.3"}
slog = "*"
slog-term = "*"
slog-async = "*"
sled = "0.34.6"
crossbeam = "*"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3"
rand = "*"
crossbeam_utils = "*"

[[bench]]
name = "kvs_benchmark"
harness = false
